# cpc

./: .cpcready.yml  .gitignore  .gitmodules  464.rvm  CHANGELOG.md  LICENSE.md  PREDATOR.DSK  RAMBO.CH1  RAMBO_II.DSK  RAMBO_III.DSK  README.md  build.py  david1.cdt  disc_SYSTEM.dsk  disc_VENDOR.dsk  install.sh  m4.py  md.py  newtest.dsk  pepepe.dsk  pp.bas  pp.dsk  pp2.bas  prueba.cdt  prueba1.dsk  prueba10.cdt  prueba11.cdt  prueba12.cdt  prueba12222222d.cdt  prueba13.cdt  prueba14.cdt  prueba2.cdt  prueba3.cdt  prueba4.cdt  prueba5.cdt  prueba6.cdt  prueba7.cdt  prueba8.cdt  prueba9.cdt  prueba_test.dsk  (+12 more)
.devcontainer/: devcontainer.json
.github/: PUBLISHING.md
.github/workflows/: publish-chocolatey.yml  publish-pypi.yml  release.yml  test-compatibility.yml  test-formula-linux.yml
.run/: cpc drive.run.xml
Guides/: STATUS_BAR_LAYOUT_GUIDE.md  TOML_ACCESS_GUIDE.md  demo_status_layout.py  ejemplos_toml.py  test_toml_access.py
NOTAS/: bios.py  bios_config.json  config.py  emulator_choice.json  kill_rvm.py  rvm.txt
Version/: README.md  VERSION_SYSTEM.md  changelog_from_git.sh  create_release.sh  smart_commit.sh
cpcready/: __init__.py  cli.py
cpcready/cat/: __init__.py  cat.py
cpcready/configweb/: __init__.py  configweb.py  streamlit_app.py
cpcready/console/: README.md  __init__.py  console.py  interactive.py  interactive_old.py  warp copy.py  warp.py  webapp.py
cpcready/disc/: __init__.py  disc.py
cpcready/drive/: A.py  B.py  __init__.py  a.py  b.py  drive.py  eject.py  status.py
cpcready/emu/: emu.py
cpcready/environment/: __init__.py  environment.py
cpcready/era/: __init__.py  era.py
cpcready/filextr/: __init__.py  filextr.py
cpcready/list/: __init__.py  list.py
cpcready/m4/: __init__.py  m4.py
cpcready/mode/: __init__.py  mode.py
cpcready/model/: __init__.py  model.py
cpcready/pycdt/: __init__.py  cdt.py  exceptions.py  structures.py
cpcready/pydsk/: __init__.py  basic_viewer.py  cli.py  demo_library.py  dsk.py  examples.py  exceptions.py  structures.py  test_cabeceras_amsdos.py  test_compatibility.py  test_errores_directos.py
cpcready/ren/: __init__.py  ren.py
cpcready/run/: __init__.py  run.py
cpcready/rvm/: rvm.py
cpcready/save/: __init__.py  save.py
cpcready/settings/: __init__.py  settings.py
cpcready/sysinfo/: __init__.py  sysinfo.py
cpcready/tape/: __init__.py  tape.py
cpcready/user/: __init__.py  user.py
cpcready/utils/: __init__.py  click_custom.py  config.py  (+8 more)
etc/: CMakeLists.txt  dashboard  dashboard copy.cpp  dashboard.cpp  env.sh  logo.sh  paneles  paneles.cpp  pepe.sh  terminal copy.conf  terminal.conf  tmux-start copy.sh  tmux-start.sh
idsk/: iDSK
lib/: cpcready-common.sh
opt/: iDSK  yq_cpc
src/: cpcready-commands.sh  cpcready-disc.sh  cpcready-help.sh  cpcready-run.sh  cpcready-save.sh  cpcready-version.sh
tests/: conftest.py  test_commands.py  test_commands_options.py  test_disk.py  test_docs_build.py  test_extra_coverage.py
(+23 files in other folders)
