[tool.poetry]
name = "cpcready"
version = "1.0.0"
description = "CPCReady Toolchain"
license = "MIT"
authors = ["destroyer <destroyer.dcf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
click = "^8.3.0"
tabulate = "^0.9.0"
rich = "^14.2.0"
prompt-toolkit = "^3.0.52"
psutil = "^7.1.3"
questionary = "^2.1.1"
tomli-w = "^1.1.0"
tomli = {version = "1.0.0", python = "<3.11"}
requests = "^2.32.5"



[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cpc = "cpcready.cli:cli"
disc = "cpcready.disc.disc:disc"
drive = "cpcready.drive:drive_group"
catcpc = "cpcready.cat.cat:cat"
A = "cpcready.drive.A:A"
B = "cpcready.drive.B:B"
user = "cpcready.user:user"
save = "cpcready.save:save"
era = "cpcready.era:era"
list = "cpcready.list:list"



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"